# opentelemetry-opensafely

./: .gitignore  DEVELOPERS.md  README.md  justfile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.txt
.github/workflows/: main.yml
otel_opensafely/: trace.py
tests/: conftest.py  test_decorator.py
